[package]
name = "rustfinger"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", default-features = false, features = ["json", "query", "tokio", "http1", "http2"] }
tokio = { version = "1.0", default-features = false, features = ["macros", "rt-multi-thread", "signal", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
url = "2.4"
regex = "1.0"
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter"] }
http = "1.0"
tower = { version = "0.4", default-features = false }
tower-http = { version = "0.5", default-features = false, features = ["cors"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true